# prompt_teacher

./: .gitignore  README.md  metaprompts.yml  pyproject.toml  requirements.txt
src/prompt_teacher/: __init__.py  app.py  callbacks.py  messages.py  metaprompts.py
